[package]
authors = ["Ernestas Poskus <ernestas.poskus@gmail.com>"]
name = "ironhelp"
version = "0.1.0"

[dependencies]
iron = "0.6.0"
log = "0.4.0"
plugin = "0.2.6"
router = "0.6.0"
serde = "1.0.26"
serde_derive = "1.0.26"
serde_json = "1.0.8"

[dependencies.cookie]
features = ["secure"]
version = "0.10.1"

[dependencies.maud]
features = ["iron"]
version = "0.17.2"
